--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
         <span id="finish">去结账</span>
     </div>
 </div>
+<script src="./js/vue.min.js"></script>
+<script src="./js/vue-resource.min.js"></script>
+<script src="./js/Shopping-Car.js"></script>
 </body>
 </html>
